# Financial-Analyser

./: README.md  analyze.ipynb  finance.py  generate_bank_data.py  main.py  pyproject.toml
analyzer/: __init__.py  categorize.py  report.py  statistics.py  utils.py
data/: bank_transactions_dummy.csv
