[project]
name = "financeanalyzer"
version = "0.1.0"
description = "CLI + notebook that categorizes bank/UPI transactions and reports spending"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "seaborn>=0.13.2",
]
